# spark_airflow

./: README.md  pyproject.toml
dags/: pyspark_movie.py
src/spark_air/: repartition.py
tests/: test_re.py
